src/objects/altm__Commercial_Alert__c.object
<CustomObject>
    <fields>
        <fullName>BBVA_rejection_sub_reason_desc__c</fullName>
        <label>BBVA Discard Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>altm__BBVA_rejection_reason_desc__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tasa</fullName>
                </value>
                <value>
                    <fullName>Operacióndenegadaenelúltimoaño</fullName>
                    <label>Operación denegada en el último año</label>
                </value>
                <value>
                    <fullName>Topederiesgo</fullName>
                    <label>Tope de riesgo</label>
                </value>
                <value>
                    <fullName>Condiciones adicionales (garantías, covenants, etc)</fullName>
                </value>
                <value>
                    <fullName>Tiempo de respuesta</fullName>
                </value>
                <value>
                    <fullName>Proceso de contratación</fullName>
                </value>
                <value>
                    <fullName>Condiciones de producto</fullName>
                </value>
                <value>
                    <fullName>No cubre necesidad</fullName>
                </value>
                <value>
                    <fullName>Política restrictiva de cliente/grupo</fullName>
                </value>
                <value>
                    <fullName>Deterioro económico financiero/falta capacidad de pago</fullName>
                </value>
                <value>
                    <fullName>Ciclo propio del negocio</fullName>
                </value>
                <value>
                    <fullName>No cuenta con perfil BEC</fullName>
                </value>
                <value>
                    <fullName>Operación denegada por GOF en el ultimo año</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__Access_to_this_alert__c</fullName>
        <formula>OwnerId = $User.Id || altm__User_id__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access to this alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>altm__Actual_drawn_cr_revolving_per__c</fullName>
        <label>% actual utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>altm__Client_product_accepted_type__c</fullName>
        <label>Client accepted the product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__Client_rejection_reason_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deal awarded to competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>altm__Expected_drawn_cr_revolving_per__c</fullName>
        <label>% expected utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>altm__ISIN_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__Leveraged_Buyout_start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>altm__Monitor_manager_user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monitoring manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Alerts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>altm__Origination_manager_user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origination manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Alerts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>altm__Others_rejection_reason_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Others</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>altm__Project_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__Rejection_reason_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>altm__Repayment_capital_drawn_per__c</fullName>
        <label>% (Repayment/drawn)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>altm__Repayment_credit_limit_revlv_per__c</fullName>
        <label>% (Repayment/limit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>altm__Transaction_type_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__User_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banker/Product Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>altm__alert_expiration_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>altm__alert_stage_type__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>In management</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Won</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Discarded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__amortization_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Repayment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__bbva_share_amount__c</fullName>
        <label>BBVA Nominal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__bloomberg_ticker_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ticker</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__campaign_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Action</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Commercial Alerts</relationshipLabel>
        <relationshipName>Commercial_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>altm__clan_syndicated_contract_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__client_process_accepted_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>altm__comm_alerts_perf_actions_type__c</fullName>
        <label>Actions to be performed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__commercial_alert_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__commercial_alert_end_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>altm__commercial_alert_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Alert ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__commercial_alert_record_type__c</fullName>
        <label>Type (not visible)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Management</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Conjunutural</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__commercial_alert_rfq_amount__c</fullName>
        <label>Live Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__commercial_alert_start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>altm__commercial_alert_task_type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tarea</fullName>
                </value>
                <value>
                    <fullName>Marca</fullName>
                </value>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>Pasivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__commercial_product_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__commercial_subalert_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub-alert Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__country_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__data_source_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__entity_id__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__execution_indicator_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Success Metrics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>altm__financial_tail_month_number__c</fullName>
        <label>Tail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>altm__gf_alert_delay_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Snooze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>altm__gf_last_upload_alerts_ind_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>altm__operation_amount__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__operation_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trade date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>altm__opperation_amount__c</fullName>
        <label>Nominal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__origination_manager_team_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Origination Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__origl_currency_operation_amount__c</fullName>
        <label>Current Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__owner_access_alert_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__participant_id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alerts (Client Name)</relationshipLabel>
        <relationshipName>Commercial_Alerts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>altm__pricing_data_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>altm__primary_asset_clasification_type__c</fullName>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__priority_alert_type__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>altm__process_discard_status_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>altm__repayment_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>altm__sector_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__solution_category_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__synd_loan_amortization_amount__c</fullName>
        <label>Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__syndicated_contract_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Syndicated Contract Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__syndicated_loan_committed_amount__c</fullName>
        <label>Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__syndicated_loan_drawn_amount__c</fullName>
        <label>Drawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__syndicated_loan_total_amount__c</fullName>
        <label>Total Nominal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__syndicated_loan_undrawn_amount__c</fullName>
        <label>Undrawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>altm__syndicated_tranche_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tranche</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altm__total_transaction_number__c</fullName>
        <label>Number of transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>altm__transaction_dest_country_id__c</fullName>
        <label>Destination country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>campaign_type__c</fullName>
        <formula>TEXT(altm__campaign_id__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commercial_alert_category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>altm__commercial_alert_record_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3x3</fullName>
                </value>
                <value>
                    <fullName>Anticipa</fullName>
                </value>
                <value>
                    <fullName>CashOut</fullName>
                    <label>Cash Out</label>
                </value>
                <value>
                    <fullName>CashIn</fullName>
                    <label>Cash in</label>
                </value>
                <value>
                    <fullName>Coyuntura</fullName>
                </value>
                <value>
                    <fullName>Descuentos</fullName>
                </value>
                <value>
                    <fullName>Digitalizate</fullName>
                </value>
                <value>
                    <fullName>MedianoPlazo</fullName>
                    <label>Mediano Plazo</label>
                </value>
                <value>
                    <fullName>NuevasLineas</fullName>
                    <label>Nuevas Líneas</label>
                </value>
                <value>
                    <fullName>PagoaProveedores</fullName>
                    <label>Pago a Proveedores</label>
                </value>
                <value>
                    <fullName>PagodeHaberes</fullName>
                    <label>Pago de Haberes</label>
                </value>
                <value>
                    <fullName>PrecioSubestandar</fullName>
                    <label>Precio Subestandar</label>
                </value>
                <value>
                    <fullName>Recursos</fullName>
                </value>
                <value>
                    <fullName>Redes</fullName>
                </value>
                <value>
                    <fullName>UsodeLineas</fullName>
                    <label>Uso de Líneas</label>
                </value>
                <value>
                    <fullName>Vinculación3/7</fullName>
                    <label>Vinculación 3/7</label>
                </value>
                <value>
                    <fullName>Vinculación4/7</fullName>
                    <label>Vinculación 4/7</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commercial Alert</label>
    <listViews>
        <fullName>BE_CommercialAlert</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>altm__participant_id__c</columns>
        <columns>commercial_alert_category__c</columns>
        <columns>altm__commercial_alert_task_type__c</columns>
        <columns>altm__alert_stage_type__c</columns>
        <columns>altm__commercial_alert_start_date__c</columns>
        <columns>altm__commercial_alert_end_date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>altm__alert_stage_type__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <filters>
            <field>altm__alert_stage_type__c</field>
            <operation>equals</operation>
            <value>02</value>
        </filters>
        <label>Alertas comerciales activas</label>
    </listViews>
    <listViews>
        <fullName>BE_CommercialAlertWon</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>altm__participant_id__c</columns>
        <columns>altm__commercial_alert_record_type__c</columns>
        <columns>commercial_alert_category__c</columns>
        <columns>altm__commercial_alert_task_type__c</columns>
        <columns>altm__commercial_alert_start_date__c</columns>
        <columns>altm__commercial_alert_end_date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>altm__alert_stage_type__c</field>
            <operation>equals</operation>
            <value>03</value>
        </filters>
        <filters>
            <field>altm__commercial_alert_end_date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>altm__commercial_alert_end_date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <label>Alertas comerciales ganadas</label>
    </listViews>
    <listViews>
        <fullName>BE_CommercialAlert_Closed</fullName>
        <columns>NAME</columns>
        <columns>altm__participant_id__c</columns>
        <columns>commercial_alert_category__c</columns>
        <columns>altm__commercial_alert_task_type__c</columns>
        <columns>altm__alert_stage_type__c</columns>
        <columns>altm__commercial_alert_start_date__c</columns>
        <columns>altm__commercial_alert_end_date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>altm__commercial_alert_end_date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Alertas comerciales cerradas</label>
    </listViews>
    <listViews>
        <fullName>BE_CommercialAlert_Discarded</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>altm__participant_id__c</columns>
        <columns>altm__commercial_alert_record_type__c</columns>
        <columns>commercial_alert_category__c</columns>
        <columns>altm__commercial_alert_task_type__c</columns>
        <columns>altm__commercial_alert_start_date__c</columns>
        <columns>altm__commercial_alert_end_date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>altm__alert_stage_type__c</field>
            <operation>equals</operation>
            <value>04</value>
        </filters>
        <filters>
            <field>altm__commercial_alert_end_date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>altm__commercial_alert_end_date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <label>Alertas comerciales descartas</label>
    </listViews>
    <listViews>
        <fullName>altm__All</fullName>
        <columns>NAME</columns>
        <columns>altm__participant_id__c</columns>
        <columns>altm__commercial_alert_record_type__c</columns>
        <columns>commercial_alert_category__c</columns>
        <columns>altm__commercial_alert_task_type__c</columns>
        <columns>altm__alert_stage_type__c</columns>
        <columns>altm__commercial_alert_start_date__c</columns>
        <columns>altm__commercial_alert_end_date__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Alerts</pluralLabel>
    <recordTypes>
        <fullName>BE_CommercialAlert</fullName>
        <active>true</active>
        <label>Commercial Alert</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BE_CA_ChangeOwner</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED( OwnerId),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,$Profile.Name &lt;&gt; &apos;Migracion&apos;)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>No se puede editar el propietario del registro.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_CA_ChangeStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(altm__alert_stage_type__c), 
OR($Profile.Name=&apos;Ejecutivo&apos;, $Profile.Name = &apos;Analista&apos;,
$Profile.Name = &apos;Especialista&apos;,$Profile.Name = &apos;Operativo&apos;),
RecordType.DeveloperName=&apos;BE_CommercialAlert&apos;,
OR(				
ISPICKVAL(PRIORVALUE(altm__alert_stage_type__c),&apos;03&apos;),
ISPICKVAL(PRIORVALUE(altm__alert_stage_type__c),&apos;04&apos;),
OR(
AND(
				ISPICKVAL(altm__alert_stage_type__c,&apos;01&apos;),
				ISPICKVAL(PRIORVALUE(altm__alert_stage_type__c),&apos;02&apos;)
)
)
))</errorConditionFormula>
        <errorMessage>No se puede modificar el estado de la Alerta Comercial.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_CA_NotChangeName</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR($Profile.Name=&apos;Ejecutivo&apos;, $Profile.Name = &apos;Analista&apos;,
$Profile.Name = &apos;Especialista&apos;,$Profile.Name = &apos;Operativo&apos;),
ISCHANGED(altm__participant_id__c))</errorConditionFormula>
        <errorDisplayField>altm__participant_id__c</errorDisplayField>
        <errorMessage>No se puede editar el cliente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_CA_NotCreateCommAlertWithCampaing</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISBLANK(altm__campaign_id__c) ,$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,$Profile.Name &lt;&gt; &apos;Migracion&apos;)</errorConditionFormula>
        <errorDisplayField>altm__campaign_id__c</errorDisplayField>
        <errorMessage>funcionalidad no disponible de crear una alerta comercial individual</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_ValidateComments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
			OR($Profile.Name=&apos;Ejecutivo&apos;, $Profile.Name = &apos;Analista&apos;,
			$Profile.Name = &apos;Especialista&apos;,$Profile.Name = &apos;Operativo&apos;),
			OR(ISPICKVAL(altm__commercial_alert_record_type__c, &apos;02&apos;),
			ISPICKVAL(altm__commercial_alert_record_type__c, &apos;01&apos;)),
			ISPICKVAL(altm__alert_stage_type__c, &apos;04&apos;),
			TEXT(altm__BBVA_rejection_reason_desc__c) &lt;&gt; &apos;No es mi cliente&apos;,
			TEXT(altm__BBVA_rejection_reason_desc__c) &lt;&gt; &apos;No requiere financiamiento&apos;,
			OR(ISPICKVAL(altm__BBVA_rejection_reason_desc__c,&apos;&apos;),
			ISPICKVAL(BBVA_rejection_sub_reason_desc__c,&apos;&apos;))
			)</errorConditionFormula>
        <errorDisplayField>altm__Rejection_reason_desc__c</errorDisplayField>
        <errorMessage>Se debe seleccionar una razon y sub razon cuando se descarta una alerta.</errorMessage>
    </validationRules>
</CustomObject>